--- a/UI/UI.vcxproj
+++ b/UI/UI.vcxproj
@@ -90,6 +90,7 @@
     </ClCompile>
     <ClCompile Include="main.cpp" />
     <ClCompile Include="MainWindow.cpp" />
+    <ClCompile Include="StatusMessages.cpp" />
   </ItemGroup>
   <ItemGroup>
     <CustomBuild Include="UI.qrc">
@@ -105,6 +106,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="MainWindow.h" />
+    <ClInclude Include="StatusMessages.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
