--- a/UI/UI.vcxproj.filters
+++ b/UI/UI.vcxproj.filters
@@ -58,6 +58,9 @@
     <ClCompile Include="NewGameDialog.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="OnlinePlayerSettingsDialog.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <CustomBuild Include="UI.qrc">
