--- a/GameLogic/GameLogic.vcxproj
+++ b/GameLogic/GameLogic.vcxproj
@@ -95,6 +95,7 @@
     <ClInclude Include="HumanPlayer.h" />
     <ClInclude Include="OnlinePlayer.h" />
     <ClInclude Include="Player.h" />
+    <ClInclude Include="PlayerType.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
