--- a/GameLogic/GameLogic.vcxproj.filters
+++ b/GameLogic/GameLogic.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClInclude Include="OnlinePlayer.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="PlayerType.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Filter Include="Source Files">
