--- a/UI/UI.vcxproj
+++ b/UI/UI.vcxproj
@@ -119,6 +119,7 @@
     </CustomBuild>
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="GameThread.h" />
     <ClInclude Include="OnlinePlayerSettingDialogs.h" />
     <CustomBuild Include="MainWindow.h">
       <AdditionalInputs Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">$(QTDIR)\bin\moc.exe;%(FullPath)</AdditionalInputs>
