--- a/UI/UI.vcxproj.filters
+++ b/UI/UI.vcxproj.filters
@@ -80,5 +80,8 @@
     <ClInclude Include="OnlinePlayerSettingDialogs.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="GameThread.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
