--- a/UI/UI.vcxproj.filters
+++ b/UI/UI.vcxproj.filters
@@ -61,6 +61,9 @@
     <ClCompile Include="OnlinePlayerSettingsDialog.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="GameThread.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <CustomBuild Include="UI.qrc">
@@ -78,6 +81,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="OnlinePlayerSettingDialogs.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="GameThread.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
