--- a/UI/UI.vcxproj
+++ b/UI/UI.vcxproj
@@ -41,9 +41,13 @@
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <LinkIncremental>true</LinkIncremental>
+    <IncludePath>E:\Programming\C++\AI\XO\Networking\NetGlobals;E:\Programming\C++\AI\XO\Networking\Server;E:\Programming\C++\AI\XO\Networking\Client;E:\Programming\C++\AI\XO\Globals;E:\Programming\C++\AI\XO\GameLogic;E:\Programming\C++\AI\XO\GameData;E:\Programming\C++\AI\XO\DecisionTree;$(IncludePath)</IncludePath>
+    <LibraryPath>E:\Programming\C++\AI\XO\Lib;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <LinkIncremental>false</LinkIncremental>
+    <IncludePath>E:\Programming\C++\AI\XO\Networking\NetGlobals;E:\Programming\C++\AI\XO\Networking\Server;E:\Programming\C++\AI\XO\Networking\Client;E:\Programming\C++\AI\XO\Globals;E:\Programming\C++\AI\XO\GameLogic;E:\Programming\C++\AI\XO\GameData;E:\Programming\C++\AI\XO\DecisionTree;$(VCInstallDir)include;$(VCInstallDir)atlmfc\include;$(WindowsSDK_IncludePath);</IncludePath>
+    <LibraryPath>E:\Programming\C++\AI\XO\Lib;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
@@ -57,6 +61,7 @@
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
+      <AdditionalDependencies>Client.lib;NetGlobals.lib;DecisionTree.lib;GameData.lib;GameLogic.lib;Globals.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -75,6 +80,7 @@
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
+      <AdditionalDependencies>Client.lib;NetGlobals.lib;DecisionTree.lib;GameData.lib;GameLogic.lib;Globals.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
