--- a/UI/UI.vcxproj
+++ b/UI/UI.vcxproj
@@ -84,11 +84,17 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Game.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="PlayerChoiceWindow.cpp" />
     <ClCompile Include="StatusMessages.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="ConsoleControl.h" />
+    <ClInclude Include="Game.h" />
+    <ClInclude Include="PlayerChoiceWindow.h" />
     <ClInclude Include="StatusMessages.h" />
+    <ClInclude Include="Window.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
