--- a/UI/UI.vcxproj
+++ b/UI/UI.vcxproj
@@ -93,6 +93,7 @@
   <ItemGroup>
     <ClInclude Include="ConsoleControl.h" />
     <ClInclude Include="Game.h" />
+    <ClInclude Include="NetworkOptions.h" />
     <ClInclude Include="StatusMessages.h" />
     <ClInclude Include="Windows\PlayerChoiceWindow.h" />
     <ClInclude Include="Windows\Window.h" />
