--- a/UI/UI.vcxproj
+++ b/UI/UI.vcxproj
@@ -87,7 +87,9 @@
     <ClCompile Include="ConsoleControl.cpp" />
     <ClCompile Include="Game.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="NetworkOptions.cpp" />
     <ClCompile Include="StatusMessages.cpp" />
+    <ClCompile Include="Window.cpp" />
     <ClCompile Include="Windows\PlayerChoiceWindow.cpp" />
   </ItemGroup>
   <ItemGroup>
