--- a/UI/UI.vcxproj
+++ b/UI/UI.vcxproj
@@ -87,15 +87,15 @@
     <ClCompile Include="ConsoleControl.cpp" />
     <ClCompile Include="Game.cpp" />
     <ClCompile Include="main.cpp" />
-    <ClCompile Include="StatusMessages.cpp" />
     <ClCompile Include="Window.cpp" />
+    <ClCompile Include="Windows\GameWindow.cpp" />
     <ClCompile Include="Windows\NetworkOptions.cpp" />
     <ClCompile Include="Windows\PlayerChoiceWindow.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="ConsoleControl.h" />
     <ClInclude Include="Game.h" />
-    <ClInclude Include="StatusMessages.h" />
+    <ClInclude Include="Windows\GameWindow.h" />
     <ClInclude Include="Windows\NetworkOptions.h" />
     <ClInclude Include="Windows\PlayerChoiceWindow.h" />
     <ClInclude Include="Windows\Window.h" />
